--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -347,7 +347,7 @@
                         </table>
                     </fieldset>
                 </div>
-                <a href="admin/product/add" class="btn btn-sm btn-outline-secondary">Добавить товар</a>
+                <a href="http://localhost:8080/admin/product/add" class="btn btn-sm btn-outline-secondary">Добавить товар</a>
                 <fieldset><legend>Работа с товарами:</legend>
                     <br><br>
                     <div th:each="product : ${products}">
